<resources>
    <string name="app_name">pianosense</string>
    <string name="next">Next Page</string>
    <string name="next_page">Next Page</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>

    <string name="search">Search</string>
    <string name="play">Play</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="passwords_account"><![CDATA[Passwords & Account]]></string>
    <string name="start_practice">Start Recording</string>
    <string name="play_music">Listen Music</string>
    <string name="save">Save</string>
    <string name="evgeny_grinko">Evgeny Grinko</string>
    <string name="valse_title">Valse</string>
    <string name="music_sheet_image">Valse Music Bu Evgny Grinko</string>
    <string name="scrollable_image">scrollable image</string>
    <string name="listen_music">Müzik dinle</string>
    <string name="search_icon">Search Music\n</string>
    <string name="status_icon">Status İcon</string>
    <string name="music_mage">Music İmage</string>
    <string name="title_activity_ogretmen_panel">OgretmenPanelActivity</string>
</resources>